# detective-board

./: App.css  App.js  Cargo.toml  README.md  db.js
backend/: Cargo.toml
backend/src/: main.rs  models.rs  supabase.rs  utils.rs
backend/src/handlers/: import.rs  mod.rs  proxy.rs  share.rs
components/: CaseManager.js  ConnectionLayer.js  ContextMenu.js  DrawingLayer.js  Node.js  Notebook.js
frontend/: App.css  package-lock.json  package.json
frontend/hooks/: useCaseManagement.js  useDrawing.js  useDrawingTools.js  useNodeInteraction.js
frontend/src/: App.css  App.js  App.module.css  index.js
frontend/src/components/: CaseManager.js  ConnectionLayer.js  Node.js
frontend/src/hooks/: useCaseManagement.js  useClipboardEvents.js  useDetectiveBoard.js
frontend/src/store/: useStore.js
frontend/src/styles/: themes.css
frontend/src/utils/: id.js  importing.js  math.js  sharing.js
frontend/utils/: geometry.js
hooks/: useBoardInteraction.js  useBoardState.js  useCaseManagement.js  useClipboardEvents.js  useDetectiveBoard.js  useDrawing.js  useDrawingTools.js  useKeyboardShortcuts.js  useMenuInteraction.js  useNodeInteraction.js  useUIState.js
new-frontend/: NODE_CONTENT_IMPLEMENTATION.md  next.config.ts  package-lock.json  package.json
new-frontend/src/app/: Page.module.css  globals.css  page.tsx
new-frontend/src/components/: AudioContent.tsx  ContextMenu.tsx  Edge.tsx  ImageContent.tsx  MediaContent.module.css  Node.module.css  Node.tsx  PdfContent.module.css  PdfContent.tsx  (+1 more)
store/: useStore.js
utils/: geometry.js  math.js  media.js
(+38 files in other folders)
